--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "19.0.0",
     "react-hook-form": "^7.54.2",
     "react-router": "^7.1.5",
+    "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1"
@@ -42,5 +43,8 @@
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
     "vite": "^6.0.5"
+  },
+  "overrides": {
+    "react-is": "^19.0.0-rc-69d4b800-20241021"
   }
 }
